# low-latency-orderbook

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DESIGN.md  Dockerfile  LICENSE  PLAN.md  PROGRESS.md  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  book_micro_bench.cc  dummy_bench.cc  e2e_bench_lib.h  false_sharing_bench.cc  lob_e2e_bench.cc  matching_bench.cc  script_rng.h
docs/: optlog.md  results.md
include/lob/: affinity.h  async_logger.h  latency.h  matching_engine.h  naive_book.h  order_book.h  order_pool.h  price_ladder.h  replay_format.h  spsc_queue.h  stats.h  types.h  workload_gen.h
scripts/: format.sh  perf_stat.sh  tidy.sh
tests/: CMakeLists.txt  affinity_test.cc  async_logger_test.cc  differential_add_cancel_test.cc  differential_matching_test.cc  e2e_bench_test.cc  edge_cases_test.cc  engine_loop_test.cc  event_test_util.h  invariants_test.cc  latency_test.cc  matching_engine_test.cc  naive_book_test.cc  order_book_test.cc  order_pool_test.cc  pipeline_smoke_test.cc  pipeline_stress_test.cc  price_ladder_test.cc  price_level_test.cc  replay_cli_test.cc  replay_format_test.cc  script_test_util.h  smoke_test.cc  spsc_queue_stress_test.cc  spsc_queue_test.cc  stats_test.cc  types_test.cc  workload_gen_test.cc  zero_alloc_test.cc
tools/: CMakeLists.txt  lob_replay.cc  lob_replay_lib.h  plot_bench.py
